[package]
name = "appliance"
version = "0.2.0"
edition = "2018"
authors = ["Pavel Korotkov <pkorotkov@gmail.com>"]
description = "A lightweight framework to build components with message-based intercommunications."
documentation = "https://docs.rs/appliance"
homepage = "https://github.com/pkorotkov/appliance"
repository = "https://github.com/pkorotkov/appliance"
license = "Apache-2.0 OR MIT"
keywords = ["async", "actor", "message-passing", "smol"]

[[bench]]
name = "messages"
harness = false

[dependencies]
async-executor = "1.4.0"
async-io = "1.3.1"
event-listener = "2.5.1"
flume = "0.10.2"
futures-lite = "1.11.3"
once_cell = "1.7.0"
num_cpus = "1.13.0"

[dev-dependencies]

bit-vec = "0.6.3"
criterion = "0.3.4"
thiserror = "1.0.24"